feat(icons-vue): add vue 3 support (#7545)
* fix: carbon icons vue for vue 3

* fix(icon-build-helpers): add vue as external

* chore(ci): update build concurrency to 1

* chore(ci): increase heap size for Node.js

* chore(project): revert ci heap space change

* feat(icon-build-helpers): update rollup to latest versions

* chore(ci): update heap space for Node.js

* chore(project): debug icons-vue build

* chore(icons): add rimraf devDependency

* chore(icons): update to include workspace dependencies

* fix: smal refactor

* fix: big refactor

* fix: correct handling of children

* chore(project): revert changes to circleci

Co-authored-by: Lee Chase <lee.chase@uk.ibm.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: Dave Clark <dave.clark@uk.ibm.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@carbon/cli": "^10.18.0-rc.0",
-    "@carbon/icon-build-helpers": "^0.14.0-rc.0"
+    "@carbon/icon-build-helpers": "^0.14.0-rc.0",
+    "rimraf": "^3.0.2"
   }
 }
