--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-react": "^7.10.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/icon-helpers": "^10.12.0-rc.0",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-replace": "^2.3.4",
     "browserslist-config-carbon": "^10.6.0",
     "change-case": "^4.1.1",
     "core-js": "^3.6.5",
@@ -39,10 +41,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.15.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-strip-banner": "^0.2.0",
+    "rollup": "^2.36.1",
+    "rollup-plugin-strip-banner": "^2.0.0",
     "svgo": "^1.1.1"
   }
 }
