--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/cli",
   "description": "Task automation for working with the Carbon Design System",
-  "version": "10.18.0-rc.0",
+  "version": "10.18.0",
   "license": "Apache-2.0",
   "bin": {
     "carbon-cli": "./bin/carbon-cli.js"
@@ -42,7 +42,7 @@
     "lodash.template": "^4.5.0",
     "markdown-toc": "^1.2.0",
     "prettier": "^2.2.1",
-    "prettier-config-carbon": "^0.6.0-rc.0",
+    "prettier-config-carbon": "^0.6.0",
     "progress-estimator": "^0.2.2",
     "remark": "^10.0.1",
     "replace-in-file": "^6.1.0",
