--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/colors",
   "description": "Colors for digital and software products using the Carbon Design System",
-  "version": "10.19.0-rc.0",
+  "version": "10.19.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,10 +35,10 @@
     "clean": "rimraf css es lib umd scss"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.18.0-rc.0",
+    "@carbon/cli": "^10.18.0",
     "@carbon/cli-reporter": "^10.4.0",
-    "@carbon/scss-generator": "^10.12.0-rc.0",
-    "@carbon/test-utils": "^10.14.0-rc.0",
+    "@carbon/scss-generator": "^10.12.0",
+    "@carbon/test-utils": "^10.14.0",
     "change-case": "^4.1.1",
     "core-js": "^3.6.5",
     "fs-extra": "^8.1.0",
