feat(elements): update colors, layout, and motion packages with experimental Sass Modules (#7546)
* refactor(colors): move Sass Modules to colors/index.scss

* feat(layout): add support for sass modules

* feat(motion): add support for sass modules

* docs(migration): add initial 11.x docs for sass modules

* chore(components): update sass check to ignore vendor files

* chore(colors): update modules test to new location

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -49,7 +49,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "./tools/copy-vendor-styles.sh && gulp build && carbon-cli check \"scss/**/*.scss\" && yarn docs",
+    "build": "./tools/copy-vendor-styles.sh && gulp build && carbon-cli check \"scss/**/*.scss\" -i \"**/vendor/**\" && yarn docs",
     "build-dev": "gulp build:dev",
     "build-dev-rollup": "gulp build:dev:deploy --rollup --use-custom-properties",
     "clean": "gulp clean",
