--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonColors && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/*.scss\"",
-    "clean": "rimraf css es lib umd scss"
+    "clean": "rimraf css es lib umd scss index.scss"
   },
   "devDependencies": {
     "@carbon/cli": "^10.18.0",
