--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -91,6 +91,11 @@
     "@carbon/icons-react": "^10.24.0",
     "@carbon/test-utils": "^10.14.0",
     "@frctl/fractal": "^1.1.0",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-virtual": "^2.0.3",
     "adaro": "1.0.4",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
@@ -161,14 +166,9 @@
     "react-copy-to-clipboard": "^5.0.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.4.0",
-    "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^9.0.0",
-    "rollup-plugin-filesize": "^6.0.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-terser": "^4.0.0",
-    "rollup-plugin-virtual": "^1.0.0",
+    "rollup": "^2.38.0",
+    "rollup-plugin-filesize": "^9.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.24.5",
     "sass-loader": "^8.0.2",
     "serve-static": "^1.13.0",
