--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -74,6 +74,10 @@
     "@babel/preset-react": "^7.10.0",
     "@carbon/test-utils": "^10.14.0",
     "@percy/storybook": "^3.3.1",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
@@ -108,14 +112,10 @@
     "react-test-renderer": "^16.8.6",
     "requestanimationframe": "^0.0.23",
     "rimraf": "^3.0.0",
-    "rollup": "^1.10.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-sizes": "^0.5.0",
-    "rollup-plugin-strip-banner": "^1.0.0",
-    "rollup-plugin-terser": "^4.0.0",
+    "rollup": "^2.38.0",
+    "rollup-plugin-sizes": "^1.0.3",
+    "rollup-plugin-strip-banner": "^2.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rtlcss": "^2.4.0",
     "sass-loader": "^8.0.2",
     "storybook-preset-carbon": "^0.1.0",
