feat(Dropdown): add hideTitleText prop (#7594)
* feat(Dropdown): add hideTitleText prop

* refactor(Dropdown): change hideTitleText to hideLabel

Co-authored-by: Tony Wu <tonywu@tonys-mbp.home>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -646,6 +646,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "molyholy",
+      "name": "molyholy",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/77503726?v=4",
+      "profile": "https://github.com/molyholy",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "commitConvention": "none"
