--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -72,6 +72,7 @@
     "@babel/plugin-transform-object-assign": "^7.7.4",
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
+    "@carbon/storybook-addon-theme": "0.1.0",
     "@carbon/test-utils": "^10.14.0",
     "@percy/storybook": "^3.3.1",
     "@rollup/plugin-babel": "^5.2.2",
