--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/colors",
   "description": "Colors for digital and software products using the Carbon Design System",
-  "version": "10.19.0",
+  "version": "10.20.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,7 +35,7 @@
     "clean": "rimraf css es lib umd scss index.scss"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.18.0",
+    "@carbon/cli": "^10.19.0-rc.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/scss-generator": "^10.12.0",
     "@carbon/test-utils": "^10.14.0",
