--- a/packages/feature-flags/package.json
+++ b/packages/feature-flags/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/feature-flags",
   "private": true,
   "description": "Build with feature flags in Carbon",
-  "version": "0.4.0",
+  "version": "0.5.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
