--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.14.0",
+  "version": "0.15.0-rc.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": {
@@ -25,7 +25,7 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@carbon/cli-reporter": "^10.4.0",
-    "@carbon/icon-helpers": "^10.12.0",
+    "@carbon/icon-helpers": "^10.13.0-rc.0",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-replace": "^2.3.4",
     "browserslist-config-carbon": "^10.6.0",
