--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.26.0",
+  "version": "10.27.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -28,13 +28,13 @@
     "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/**/*.scss\""
   },
   "dependencies": {
-    "@carbon/colors": "^10.19.0",
-    "@carbon/layout": "^10.17.0",
-    "@carbon/type": "^10.20.0",
+    "@carbon/colors": "^10.20.0-rc.0",
+    "@carbon/layout": "^10.18.0-rc.0",
+    "@carbon/type": "^10.21.0-rc.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.18.0",
+    "@carbon/cli": "^10.19.0-rc.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/scss-generator": "^10.12.0",
     "@carbon/test-utils": "^10.14.0",
