--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -31,7 +31,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonColors && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/*.scss\"",
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonColors && node tasks/build.js && carbon-cli check \"scss/*.scss\"",
     "clean": "rimraf css es lib umd scss index.scss"
   },
   "devDependencies": {
