--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -31,7 +31,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonElements && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/**/*.scss\" -i \"**/{_inlined,vendor}/**\"",
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonElements && node tasks/build.js && carbon-cli check \"scss/*.scss\"",
     "clean": "rimraf es lib umd && node tasks/clean.js"
   },
   "dependencies": {
