--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && carbon-cli sassdoc \"scss/*.scss\" && carbon-cli inline && carbon-cli check \"scss/*.scss\"",
+    "build": "yarn clean && carbon-cli inline && carbon-cli check \"scss/*.scss\"",
     "clean": "rimraf scss/_inlined scss/vendor"
   },
   "dependencies": {
