--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonLayout && node tasks/build.js && carbon-cli sassdoc \"scss/**/*.scss\"",
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonLayout && node tasks/build.js",
     "clean": "rimraf es lib umd scss/generated scss/modules/generated"
   },
   "devDependencies": {
