feat(themes): add experimental sass modules for themes (#7703)
* refactor(layout): update scale from a list to map

* feat(themes): add experimental sass modules for themes

* chore(themes): add sass modules example

* chore(themes): add example to sass-modules

* docs(themes): add early docs for v11 migrations

* chore(layout): fix workspace dependency

--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -24,6 +24,7 @@
     "access": "public"
   },
   "scripts": {
+    "ci-check": "carbon-cli check \"scss/**/*.scss\" -i \"**/generated/**\"",
     "clean": "rimraf es lib umd scss/generated",
     "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && node tasks/build.js && carbon-cli check \"scss/*.scss\""
   },
