--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -29,6 +29,7 @@
     "clean": "rimraf es lib umd scss/generated scss/modules/generated"
   },
   "devDependencies": {
+    "@carbon/cli": "^10.19.0-rc.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/scss-generator": "^10.12.0",
     "@carbon/test-utils": "^10.14.0",
