--- a/config/jest-config-carbon/package.json
+++ b/config/jest-config-carbon/package.json
@@ -35,5 +35,9 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "jest-circus": "^26.0.1"
+  },
+  "devDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
