--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,6 +23,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/core": "^7.12.13",
     "@carbon/cli-reporter": "^10.4.0",
     "@octokit/plugin-retry": "^3.0.7",
     "@octokit/plugin-throttling": "^2.6.0",
