fix(components): include side effects from src for rollup resolution (#7774)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -188,6 +188,8 @@
     "es/globals/js/watch.js",
     "scripts/*",
     "scss/**/*.scss",
+    "src/globals/js/boot.js",
+    "src/globals/js/watch.js",
     "umd/bundle.js",
     "umd/globals/js/boot.js",
     "umd/globals/js/watch.js"
