--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components-react",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "7.29.0-rc.1",
+  "version": "7.29.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -44,7 +44,7 @@
     "react-dom": "^16.8.6 || ^17.0.1"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.26.0-rc.0",
+    "@carbon/icons-react": "^10.26.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
     "classnames": "2.2.6",
     "downshift": "5.2.1",
@@ -72,7 +72,7 @@
     "@babel/plugin-transform-object-assign": "^7.7.4",
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
-    "@carbon/test-utils": "^10.15.0-rc.1",
+    "@carbon/test-utils": "^10.15.0",
     "@percy/storybook": "^3.3.1",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -89,7 +89,7 @@
     "babel-plugin-react-docgen": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
     "browserslist-config-carbon": "^10.6.0",
-    "carbon-components": "^10.29.0-rc.1",
+    "carbon-components": "^10.29.0",
     "carbon-icons": "^7.0.5",
     "chalk": "^2.3.0",
     "cli-table": "^0.3.0",
@@ -118,7 +118,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rtlcss": "^2.4.0",
     "sass-loader": "^8.0.2",
-    "storybook-preset-carbon": "^0.2.1-rc.0",
+    "storybook-preset-carbon": "^0.3.0",
     "string-replace-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.5",
