--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.22.0-rc.1",
+  "version": "10.22.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,11 +37,11 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.6.0",
-    "@carbon/layout": "^10.19.0-rc.1"
+    "@carbon/layout": "^10.19.0"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.20.0-rc.0",
-    "@carbon/test-utils": "^10.15.0-rc.1",
+    "@carbon/cli": "^10.20.0",
+    "@carbon/test-utils": "^10.15.0",
     "change-case": "^4.1.1",
     "rimraf": "^3.0.0"
   },
