--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -764,6 +764,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "szymonbrandys",
+      "name": "szymonbrandys",
+      "avatar_url": "https://avatars.githubusercontent.com/u/79149899?v=4",
+      "profile": "https://github.com/szymonbrandys",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "commitConvention": "none"
