feat(feature-flags): rename exports, add merge, and update tests (#7802)
* feat(feature-flags): rename exports, add merge, and update tests

* feat(feature-flags): add support for process.env checking for flags

* feat(feature-flags): add sass module variant with behavior that matches JS

* feat(project): integrate feature-flags with react package

* docs(feature-flags): update README

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.8.6 || ^17.0.1"
   },
   "dependencies": {
+    "@carbon/feature-flags": "^0.0.0",
     "@carbon/icons-react": "^10.26.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
     "classnames": "2.2.6",
