chore(icons): add removed icons back to update master file (#7964)
* chore(icons): add removed icons back to update master file

* chore: update snapshots

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -464,12 +464,14 @@ categories:
           - watson--machine-learning
       - name: Social
         members:
+          - logo--delicious
           - logo--digg
           - logo--discord
           - logo--facebook
           - logo--flickr
           - logo--github
           - logo--glassdoor
+          - logo--google
           - logo--instagram
           - logo--linkedin
           - logo--livestream
@@ -484,6 +486,7 @@ categories:
           - logo--xing
           - logo--yelp
           - logo--youtube
+          - logo--stumbleupon
   - name: Enterprise
     subcategories:
       - name: Commerce
@@ -612,6 +615,7 @@ categories:
           - launch-study--3
           - magnify
           - mammogram
+          - mammogram--stacked
           - medication
           - medication--alert
           - medication--reminder
