fix(ci): update actions to run against main (#8019)
* fix(storybook): filter enabled addons

* fix(ci): update actions to run against main

* chore(actions): update master to main

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -9,7 +9,7 @@ jobs:
   release:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - name: Use Node.js 14.x
         uses: actions/setup-node@v2.1.5
         with:
