--- a/.github/workflows/add-review-labels.yml
+++ b/.github/workflows/add-review-labels.yml
@@ -4,7 +4,7 @@ jobs:
   reviewer:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - uses: ./actions/add-review-labels
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
