--- a/.github/workflows/deploy-vanilla-devenv.yml
+++ b/.github/workflows/deploy-vanilla-devenv.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - name: Use Node.js 14.x
         uses: actions/setup-node@v2.1.5
         with:
