feat(UI icons): new icon misc additions (#8071)
* icons-misc-additions

Adding 2 new icons as a rush job for teams that need their icons in the repo.

* test(snapshot): update snapshot tests

* test(snapshot): update snapshot tests

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>

--- a/packages/icons/icons.yml
+++ b/packages/icons/icons.yml
@@ -12224,6 +12224,11 @@
     - qr
   sizes:
     - 32
+- name: scan--disabled
+  friendly_name: scan--disabled
+  aliases: []
+  sizes:
+    - 32
 - name: scatter-matrix
   friendly_name: Scatter matrix
   aliases:
@@ -14762,6 +14767,11 @@
     - my account
   sizes:
     - 16
+    - 32
+- name: user--access
+  friendly_name: user--access
+  aliases: []
+  sizes:
     - 32
 - name: user--activity
   friendly_name: User activity
