--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -355,6 +355,7 @@ categories:
           - run
           - save--model
           - scan
+          - scan--disabled
           - search
           - send
           - send--alt
@@ -1189,6 +1190,7 @@ categories:
           - sight
           - transgender
           - user
+          - user--access
           - user--activity
           - user--admin
           - user--avatar
