fix(feature-flags): update enabled to check for process (#8020)
* fix(feature-flags): update enabled to check for process

* fix(feature-flags): update template to use try/catch for process checks

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/feature-flags/package.json
+++ b/packages/feature-flags/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/generator": "^7.10.2",
+    "@babel/template": "^7.12.13",
     "@babel/types": "^7.10.2",
     "@carbon/scss-generator": "^10.13.0",
     "change-case": "^4.1.2",
