--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.30.0",
+  "version": "10.31.0-rc.0",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -85,9 +85,9 @@
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
     "@carbon/cli": "^10.20.0",
-    "@carbon/elements": "^10.29.0",
-    "@carbon/icons-handlebars": "^10.27.0",
-    "@carbon/icons-react": "^10.27.0",
+    "@carbon/elements": "^10.30.0-rc.0",
+    "@carbon/icons-handlebars": "^10.28.0-rc.0",
+    "@carbon/icons-react": "^10.28.0-rc.0",
     "@carbon/test-utils": "^10.15.0",
     "@frctl/fractal": "^1.1.0",
     "@rollup/plugin-babel": "^5.2.2",
