--- a/packages/sketch/package.json
+++ b/packages/sketch/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/sketch",
   "private": true,
   "description": "Tooling for generating a sketch plugin to bring code to design",
-  "version": "10.28.0",
+  "version": "10.29.0-rc.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "@babel/polyfill": "^7.8.7",
     "@carbon/colors": "^10.21.0",
     "@carbon/icon-helpers": "^10.14.0",
-    "@carbon/icons": "^10.27.0",
+    "@carbon/icons": "^10.28.0-rc.0",
     "@carbon/themes": "^10.29.0",
     "@carbon/type": "^10.23.0",
     "@skpm/builder": "^0.7.0",
