--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/styles",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -17,12 +17,12 @@
     "react"
   ],
   "dependencies": {
-    "@carbon/colors": "10.21.0",
-    "@carbon/grid": "^10.22.0",
-    "@carbon/layout": "^10.20.0",
-    "@carbon/motion": "10.14.0",
-    "@carbon/themes": "^10.29.0",
-    "@carbon/type": "^10.23.0"
+    "@carbon/colors": "^10.22.0",
+    "@carbon/grid": "^10.23.0",
+    "@carbon/layout": "^10.21.0",
+    "@carbon/motion": "^10.15.0",
+    "@carbon/themes": "^10.30.0",
+    "@carbon/type": "^10.24.0"
   },
   "devDependencies": {
     "@carbon/test-utils": "10.15.0"
