--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,6 +48,7 @@
     "@carbon/icons-react": "^10.28.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
     "classnames": "2.2.6",
+    "copy-to-clipboard": "^3.3.1",
     "downshift": "5.2.1",
     "flatpickr": "4.6.9",
     "invariant": "^2.2.3",
