feat(icon-build-helpers): add module-info extension and next react builder (#8189)
* feat(icon-build-helpers): add module-info extension and next react builder

* chore(icons): add next.json to .gitignore

* chore(icons-react): update storybook to work with yarn 2

* feat(icons-react): update builder to work with v11 icons

* chore(icons-react): ignore yarn install files

* chore(icon-build-helpers): update package.json deps

* chore(project): run yarn dedupe

* chore(project): move deps from icons-react to icon-build-helpers

* chore(icons): remove unused gitignore

* Apply suggestions from code review

* Update packages/icon-build-helpers/src/builders/react/next.js

* feat(icon-build-helpers): accept number or string for height and width props

* fix(icon-build-helpers): add more checks for component sizes

* fix(icons-react): update builder to emit entrypoints for CommonJS and ESM

* fix(icons-react): re-enable classic builder

--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -21,12 +21,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "@babel/core": "^7.12.13"
-  },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/generator": "^7.13.9",
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
+    "@babel/template": "^7.12.13",
+    "@babel/types": "^7.13.14",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/icon-helpers": "^10.15.0",
     "@rollup/plugin-babel": "^5.2.2",
@@ -46,6 +47,7 @@
     "rimraf": "^3.0.0",
     "rollup": "^2.38.0",
     "rollup-plugin-strip-banner": "^2.0.0",
+    "svg-parser": "^2.0.4",
     "svgo": "^1.1.1"
   }
 }
