--- a/packages/feature-flags/feature-flags.yml
+++ b/packages/feature-flags/feature-flags.yml
@@ -14,3 +14,7 @@ feature-flags:
       Enable components to be created in either a controlled or uncontrolled
       mode
     enabled: false
+  - name: enable-2021-release
+    description: >
+      Enable the features and functionality for the 2021 Release
+    enabled: false
