feat(project): update yarn to 3.0.0-rc.1 and add @carbon/react (#8277)
* feat(project): update yarn to source

* chore(project): update yarn.lock

* feat(project): add @carbon/react package

* chore(project): set yarn-path in .yarnrc to correct value

* chore(examples): remove css-grid from top-level build

* chore(yarn): update to 3.0.0-rc.1

* chore(project): update yarn cache for checksum mismatch

* chore(project): update yarnrc to point to 3.0.0-rc.1

--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -30,13 +30,15 @@
   },
   "scripts": {
     "build": "yarn clean && node tasks/build.js",
-    "clean": "rimraf es lib umd next"
+    "clean": "rimraf es lib umd next",
+    "postinstall": "carbon-telemetry collect --install"
   },
   "peerDependencies": {
     "react": ">=16"
   },
   "dependencies": {
     "@carbon/icon-helpers": "^10.15.0",
+    "@carbon/telemetry": "0.0.0-alpha.6",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
