--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.18.0",
+  "version": "0.19.0-rc.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": {
@@ -29,7 +29,7 @@
     "@babel/template": "^7.12.13",
     "@babel/types": "^7.13.14",
     "@carbon/cli-reporter": "^10.4.0",
-    "@carbon/icon-helpers": "^10.15.0",
+    "@carbon/icon-helpers": "^10.16.0-rc.0",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-replace": "^2.3.4",
     "browserslist-config-carbon": "^10.6.1",
