--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/styles",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0-rc.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -17,12 +17,12 @@
     "react"
   ],
   "dependencies": {
-    "@carbon/colors": "^10.22.0",
-    "@carbon/grid": "^10.24.0",
-    "@carbon/layout": "^10.22.0",
-    "@carbon/motion": "^10.15.0",
-    "@carbon/themes": "^10.31.0",
-    "@carbon/type": "^10.25.0"
+    "@carbon/colors": "^10.23.0-rc.0",
+    "@carbon/grid": "^10.25.0-rc.0",
+    "@carbon/layout": "^10.23.0-rc.0",
+    "@carbon/motion": "^10.16.0-rc.0",
+    "@carbon/themes": "^10.32.0-rc.0",
+    "@carbon/type": "^10.26.0-rc.0"
   },
   "devDependencies": {
     "@carbon/test-utils": "10.15.0"
