feat(react): add FeatureFlags to entrypoint (#8416)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/feature-flags/package.json
+++ b/packages/feature-flags/package.json
@@ -11,6 +11,12 @@
     "directory": "packages/feature-flags"
   },
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
+  "files": [
+    "es",
+    "lib",
+    "scss",
+    "index.scss"
+  ],
   "keywords": [
     "ibm",
     "carbon",
