--- a/config/storybook-preset-carbon/package.json
+++ b/config/storybook-preset-carbon/package.json
@@ -37,6 +37,7 @@
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/source-loader": "^5.3.19",
+    "fast-sass-loader": "^1.5.0",
     "react-is": "^16.8.6",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.1",
