feat(styles): add initial entrypoints and tests for styles (#8400)
* feat(styles): add updated motion package, docs, and tests

* chore(styles): add tests for colors

* feat(styles): add additional flags for config and add tests

* chore(styles): add snapshots

* docs(style): add testing style guide and recipes

* feat(styles): add additional entrypoints and tests

* docs(style): update README and package.json with description

* fix(styles): update entrypoint

* chore(grid): update tests for grid

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@carbon/styles",
   "private": true,
+  "description": "Styles for the Carbon Design System",
   "version": "0.4.0",
   "license": "Apache-2.0",
   "repository": {
@@ -18,6 +19,7 @@
   ],
   "dependencies": {
     "@carbon/colors": "^10.23.0",
+    "@carbon/feature-flags": "^0.3.0",
     "@carbon/grid": "^10.25.0",
     "@carbon/layout": "^10.23.0",
     "@carbon/motion": "^10.16.0",
