docs(carbon-react): add README and initial sass config docs (#8586)
* docs(carbon-react): add README and initial sass config docs

* Update packages/carbon-react/README.md

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

* Update packages/carbon-react/README.md

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

* Update packages/carbon-react/README.md

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

* docs(carbon-react): update README and sass docs

* docs(carbon-react): update import from icons-react to react/icons

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -35,7 +35,8 @@
   },
   "peerDependencies": {
     "react": "^16.8.6 || ^17.0.1",
-    "react-dom": "^16.8.6 || ^17.0.1"
+    "react-dom": "^16.8.6 || ^17.0.1",
+    "sass": "^1.32.12"
   },
   "dependencies": {
     "@carbon/feature-flags": "^0.3.0",
@@ -62,7 +63,8 @@
     "react-dom": "^16.8.6",
     "rimraf": "^3.0.2",
     "rollup": "^2.46.0",
-    "rollup-plugin-strip-banner": "^2.0.0"
+    "rollup-plugin-strip-banner": "^2.0.0",
+    "sass": "^1.32.12"
   },
   "sideEffects": [
     "es/feature-flags.js",
