--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/styles",
   "private": true,
   "description": "Styles for the Carbon Design System",
-  "version": "0.5.0",
+  "version": "0.6.0-rc.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -18,13 +18,13 @@
     "react"
   ],
   "dependencies": {
-    "@carbon/colors": "^10.24.0",
-    "@carbon/feature-flags": "^0.3.0",
-    "@carbon/grid": "^10.26.0",
-    "@carbon/layout": "^10.23.0",
-    "@carbon/motion": "^10.17.0",
-    "@carbon/themes": "^10.33.0",
-    "@carbon/type": "^10.27.0"
+    "@carbon/colors": "^10.25.0-rc.0",
+    "@carbon/feature-flags": "^0.4.0-rc.0",
+    "@carbon/grid": "^10.27.0-rc.0",
+    "@carbon/layout": "^10.24.0-rc.0",
+    "@carbon/motion": "^10.18.0-rc.0",
+    "@carbon/themes": "^10.34.0-rc.0",
+    "@carbon/type": "^10.28.0-rc.0"
   },
   "devDependencies": {
     "@carbon/test-utils": "10.15.0"
