Experiment/add cypress for e2e tests (#8282)
* chore(react): add cypress and initial accordion test

* wip: check in work

* wip: check in work

* chore: check in work

* chore(project): run cypress in ci

* testing(accordion): enable percy snapshots, configure cypress eslint plugin

* chore(eslint): revert readme changes

* chore(cli): move '@percy/cli' dep from react to cli package

* chore(yarn): include cache from '@percy/cli' install

* chore(project): update yarn cache checksums

* chore: clear cache

* chore: add cache

* chore: fix yarn cache

* chore: i think i finally fixed the cache

* fix(cli): modify command for percy e2e

* fix(project): update to cypress v7, retool configuration

* chore(project): move percy cli dep to root

* chore(project): turn off cypress videos and snapshots in CI

* chore(cypress): update command syntax

* chore(cypress): update command syntax

* fix(ci): correct command for jest e2e tests

* chore: run yarn dedupe

Co-authored-by: Josh Black <josh@josh.black>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint:styles": "stylelint '**/*.{css,scss}' --report-needless-disables --report-invalid-scope-disables",
     "sync": "carbon-cli sync",
     "test": "cross-env BABEL_ENV=test jest",
-    "test:e2e": "cross-env BABEL_ENV=test jest --testPathPattern=e2e --testPathIgnorePatterns='examples,/packages/components/,/packages/react/'"
+    "test:e2e": "cross-env BABEL_ENV=test jest --testPathPattern='e2e/' --testPathIgnorePatterns='examples,/packages/components/,/packages/react/'"
   },
   "resolutions": {
     "ast-types": "^0.14.0",
@@ -48,6 +48,7 @@
     "@carbon/cli": "workspace:packages/cli",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@percy/cli": "^1.0.0-beta.48",
     "@testing-library/dom": "^7.26.6",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
