--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,7 +35,8 @@
     "prepublish": "yarn build",
     "start": "yarn storybook",
     "storybook": "rimraf node_modules/.cache/storybook && start-storybook -p 9000 -s ./.storybook/assets",
-    "snapshot": "build-storybook && percy-storybook --widths=320,1280"
+    "snapshot": "build-storybook && percy-storybook --widths=320,1280",
+    "test:e2e": "cypress run-ct --config video=false,screenshotOnRunFailure=false"
   },
   "peerDependencies": {
     "carbon-components": "^10.30.0",
@@ -74,6 +75,9 @@
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
     "@carbon/test-utils": "^10.15.0",
+    "@cypress/react": "^5.4.0",
+    "@cypress/webpack-dev-server": "^1.1.5",
+    "@percy/cypress": "^3.1.0",
     "@percy/storybook": "^3.3.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
@@ -85,6 +89,7 @@
     "@storybook/react": "^5.3.21",
     "@storybook/source-loader": "^5.3.21",
     "@storybook/theming": "^6.2.9",
+    "@testing-library/cypress": "^7.0.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
@@ -97,6 +102,8 @@
     "core-js": "^3.6.5",
     "cross-env": "^5.2.0",
     "css-loader": "^3.4.2",
+    "cypress": "^7.2.0",
+    "cypress-real-events": "^1.3.0",
     "gzip-size": "^6.0.0",
     "lcov2badge": "^0.1.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -120,6 +127,7 @@
     "string-replace-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.11.2",
     "whatwg-fetch": "^2.0.3"
   },
   "sideEffects": false,
